--- a/src/AsyncManager.Sdk/AsyncManager.Sdk.csproj
+++ b/src/AsyncManager.Sdk/AsyncManager.Sdk.csproj
@@ -45,7 +45,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.AsyncManager.Sdk</PackageId>
-    <Version>3.0.2</Version>
+    <Version>3.0.3</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -55,6 +55,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      3.0.3 Corrected the URL path for the REST client for IRequestService.RetryAsync
       3.0.2 Bump
       3.0.0 New breaking contract
       2.0.1 Bump
@@ -67,7 +68,7 @@
       1.1.1 Support for setting up rest clients with your own tenant
       1.1.0 Refactored AsyncRequestClient. Now accepts RequestPostponedException.
       1.0.2 First release
-	</PackageReleaseNotes>
+    </PackageReleaseNotes>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 </Project>
