--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -29,8 +29,8 @@
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.16.0" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.10.0" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.12.3" />
-    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.26.0" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.3.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="2.27.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.4.0" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="1.1.6" />
     <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="2.0.0" />
   </ItemGroup>
@@ -55,7 +55,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>5.6.0</Version>
+    <Version>5.7.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -65,6 +65,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      5.7.0 Added the Sleep activity.
       5.6.0 IActivity now has WorkflowStartedAt and ActivityStartedAt properties
       5.5.10 Bump
       5.5.6 Now validates WorkflowSummary before returning it
