--- a/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
+++ b/src/Authentication.AspNet.Sdk/Authentication.AspNet.Sdk.csproj
@@ -18,8 +18,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.0.2" />
+    <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.29.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.18.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
-    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.2.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Web.AspNet" Version="3.2.1" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='net461'">
