--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -61,7 +61,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.2.0</Version>
+    <Version>6.3.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -71,6 +71,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.3.0 Introduced lazy logging, i.e. log storage is delayed until the workflow is postponed or completed
       6.2.0 Refactored to make it easier to do unit tests
       6.1.0 Added Parallel. Fixed ActivitySleep bug, which could make it sleep forever
       6.0.0 Refactored Semaphores and modified Sleep. Semaphore is not backwards compatible
