--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -63,7 +63,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.4.0</Version>
+    <Version>6.4.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -73,6 +73,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.4.1 Added missing overloads
       6.4.0 ActivityExecutor now understands FulcrumExceptions. Added ActivityIf and ActivitySwitch. Added SetMaxExecutionTimeSpan
       6.3.1 Refactored ActivityExecutor to make the code more consistent and readable
       6.3.0 Introduced lazy logging, i.e. log storage is delayed until the workflow is postponed or completed
