--- a/src/WorkflowEngine.Sdk.UnitTest/WorkflowEngine.Sdk.UnitTest.csproj
+++ b/src/WorkflowEngine.Sdk.UnitTest/WorkflowEngine.Sdk.UnitTest.csproj
@@ -35,7 +35,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.UnitTest</PackageId>
-    <Version>1.2.9</Version>
+    <Version>1.2.10</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -45,6 +45,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.2.10 Support for new consolidated activity style
       1.2.9 Bump
       1.2.8 Added missing activity types to switch statement 
       1.2.6 Bump
