--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -35,7 +35,7 @@
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.10.4" />
     <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.12.5" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.30.1" />
-    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.8.0" />
+    <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.9.0" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.1.0" />
     <PackageReference Include="Nexus.Link.Components.WorkflowMgmt.Abstract" Version="2.0.2" />
   </ItemGroup>
@@ -63,7 +63,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.5.2</Version>
+    <Version>6.6.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -73,6 +73,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.6.0 Consolidated how ExecuteAsync() should work for activities, to enable BeginAsync()+EndAsync()
       6.5.2 More logic around the lowering of a Throttle semaphore
       6.5.1 Bump
       6.5.0 Added ActivityLock and ActivityThrottle
