--- a/src/WorkflowEngine.Sdk.UnitTest/WorkflowEngine.Sdk.UnitTest.csproj
+++ b/src/WorkflowEngine.Sdk.UnitTest/WorkflowEngine.Sdk.UnitTest.csproj
@@ -5,6 +5,7 @@
     <AssemblyName>Nexus.Link.WorkflowEngine.Sdk.UnitTest</AssemblyName>
     <RootNamespace>Nexus.Link.WorkflowEngine.Sdk.UnitTest</RootNamespace>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <!-- Publish symbols -->
@@ -35,7 +36,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk.UnitTest</PackageId>
-    <Version>1.2.10</Version>
+    <Version>1.2.11</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -45,9 +46,10 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      1.2.11 Added missing activity types to switch statement
       1.2.10 Support for new consolidated activity style
       1.2.9 Bump
-      1.2.8 Added missing activity types to switch statement 
+      1.2.8 Added missing activity types to switch statement
       1.2.6 Bump
       1.2.1 Renamed SetBreakCondition to BreakBeforeActivity
       1.2.0 Added WorkflowSemaphore
