--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.18.2" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.10.4" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.12.5" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.13.0" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.30.1" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.10.0" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.1.0" />
@@ -63,7 +63,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.9.0</Version>
+    <Version>6.9.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -73,6 +73,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.9.1 Tried again to fix the bug that we tried to fix in 6.7.5. The change needed was in Libraries.Crud (fixed in 3.13.0)
       6.9.0 Tried to syntactially hinder bad activity flows like If().Then().Then()
       6.8.0 Refactored how we work with ParentActivity and PreviousActivity. Introduced LoopIteration and JobNumber as replacements for Iteration
       6.7.5 Now saves the ActivityInstance in an ordered fashion, to avoid foreign key constraints within the table
