--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -63,7 +63,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.9.2</Version>
+    <Version>6.10.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -73,6 +73,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.10.0 Added activity SetDeadLine(). Now throws FulcrumNotFoundException if a workflow parameter is undefined. Refactored BackgroundActivity
       6.9.2 Fixed eternal loop bug + another serious bug where we lost track of all activities, resulting in the workflow thinking it has completed successfully
       6.9.1 Tried again to fix the bug that we tried to fix in 6.7.5. The change needed was in Libraries.Crud (fixed in 3.13.0)
       6.9.0 Tried to syntactially hinder bad activity flows like If().Then().Then()
