--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <PackageReference Include="Nexus.Link.Libraries.Core" Version="5.18.2" />
     <PackageReference Include="Nexus.Link.Libraries.Crud.Web" Version="2.10.4" />
-    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.13.0" />
+    <PackageReference Include="Nexus.Link.Libraries.Crud" Version="3.13.1" />
     <PackageReference Include="Nexus.Link.Libraries.Web" Version="5.30.1" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowConfiguration.Abstract" Version="1.10.0" />
     <PackageReference Include="Nexus.Link.Capabilities.WorkflowState.Abstract" Version="2.1.0" />
@@ -63,7 +63,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.10.1</Version>
+    <Version>6.11.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -73,8 +73,9 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.11.0 Introduced SetExceptionHandler. Renamed SetDeadLine to SetDeadline. Fixed a bug in ActivitySemaphore.
       6.10.1 BackgroundActivity can now return handle sub-activities that are hidden by parent activities
-      6.10.0 Added activity SetDeadLine(). Now throws FulcrumNotFoundException if a workflow parameter is undefined. Refactored BackgroundActivity
+      6.10.0 Added activity SetDeadline(). Now throws FulcrumNotFoundException if a workflow parameter is undefined. Refactored BackgroundActivity
       6.9.2 Fixed eternal loop bug + another serious bug where we lost track of all activities, resulting in the workflow thinking it has completed successfully
       6.9.1 Tried again to fix the bug that we tried to fix in 6.7.5. The change needed was in Libraries.Crud (fixed in 3.13.0)
       6.9.0 Tried to syntactially hinder bad activity flows like If().Then().Then()
