--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -63,7 +63,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.11.0</Version>
+    <Version>6.11.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -73,7 +73,8 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      6.11.0 Introduced SetExceptionHandler. Renamed SetDeadLine to SetDeadline. Fixed a bug in ActivitySemaphore.
+      6.11.1 Missing interface for IActivityParallel
+      6.11.0 Introduced SetExceptionHandler. Renamed SetDeadLine to SetDeadline. Fixed a bug in ActivitySemaphore
       6.10.1 BackgroundActivity can now return handle sub-activities that are hidden by parent activities
       6.10.0 Added activity SetDeadline(). Now throws FulcrumNotFoundException if a workflow parameter is undefined. Refactored BackgroundActivity
       6.9.2 Fixed eternal loop bug + another serious bug where we lost track of all activities, resulting in the workflow thinking it has completed successfully
