--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -63,7 +63,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.11.3</Version>
+    <Version>6.12.0</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -73,9 +73,10 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.12.0 New strategy for dealing with OperationCancelled; introduced two new settings: OperationCancelledAfter and PostponeAfter. Also minor logging adjustments.
       6.11.3 Added early fail if the reduced cancellation token has a cancellation request
       6.11.2 ActivityPostponedException now inherits from RequestPostponedException.
-      Now has a reduced time for the activity methods to protect the workflow engine from early cancellation. 
+      Now has a reduced time for the activity methods to protect the workflow engine from early cancellation.
       Fixed a bug in Sleep that made it always succeed, even when it shouldn't
       6.11.1 Missing interface for IActivityParallel
       6.11.0 Introduced SetExceptionHandler. Renamed SetDeadLine to SetDeadline. Fixed a bug in ActivitySemaphore
