--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -63,7 +63,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.12.0</Version>
+    <Version>6.12.1</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -73,8 +73,8 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
-      6.12.0 New strategy for dealing with OperationCancelled where we restrict the time for activities.
-      To control that, we introduced two new settings: OperationCancelledAfter and PostponeAfter. Also minor logging adjustments
+      6.12.1 New strategy for dealing with OperationCancelled where we restrict the time for activities.
+      To control that, we introduced two new settings: MaxTotalRunTimeSpan and PostponeAfterTimeSpan. Also minor logging adjustments
       6.11.3 Added early fail if the reduced cancellation token has a cancellation request
       6.11.2 ActivityPostponedException now inherits from RequestPostponedException.
       Now has a reduced time for the activity methods to protect the workflow engine from early cancellation.
