--- a/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
+++ b/src/WorkflowEngine.Sdk/WorkflowEngine.Sdk.csproj
@@ -63,7 +63,7 @@
 
   <PropertyGroup>
     <PackageId>Nexus.Link.WorkflowEngine.Sdk</PackageId>
-    <Version>6.12.2</Version>
+    <Version>6.12.3</Version>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>nexus;link;fulcrum;lever</PackageTags>
     <Authors>XLENT Link</Authors>
@@ -73,6 +73,7 @@
     <Copyright>Copyright ©2021 Xlent Link AB</Copyright>
     <IncludeSymbols>true</IncludeSymbols>
     <PackageReleaseNotes>
+      6.12.3 Now doesn't try to convert circular objects when logging. Found a particularly nasty bug that only happened in loops of loops
       6.12.2 ActivityFlow now catches errors that happens in the constructors of all the Activity types. Tried to establish better loggin messages at some cruicial points
       6.12.1 New strategy for dealing with OperationCancelled where we restrict the time for activities.
       To control that, we introduced two new settings: MaxTotalRunTimeSpan and PostponeAfterTimeSpan. Also minor logging adjustments
